--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -17,6 +17,7 @@ img {
 
 div.logo {
 	float: left;
+	width: 200px;
 	left: 1em;
 	top: 1em;
 	margin: 0em;
@@ -29,6 +30,7 @@ div.routersummary {
 	/* height: 5em; */
 	/* position: fixed; */
 	float: left;
+	width: 200px;
 	/* left: 1em; */
 	/* top: 1em; */
 	margin: 0em;
@@ -42,7 +44,7 @@ div.routersummary {
 }
 
 div.warning {
-	margin: 0em 1em 1em 12em;
+	margin: 0em 1em 1em 224px;
 	padding: .5em 1em;
 	background-color: #ffefef;
 	border: medium solid #ffafaf;
@@ -51,7 +53,7 @@ div.warning {
 }
 
 div.main {
-	margin: 0em 1em 1em 12em;
+	margin: 0em 1em 1em 224px;
 	padding: .5em 1em;
 	background-color: #ffffef;
 	border: medium solid #ffffd0;
