2005-03-23  jrandom     * Implemented the news fetch / update policy code, as configurated on       /configupdate.jsp.  Defaults are to grab the news every 24h (or if it       doesn't exist yet, on startup).  No action is taken however, though if       the news.xml specifies that a new release is available, an option to       update will be shown on the router console.     * New initialNews.xml delivered with new installs, and moved news.xml out       of the i2pwww module and into the i2p module so that we can bundle it       within each update.
Monotone-Parent: 0aa4d283f4a4f5ebd290eafb3ca4d0aaa345e868
Monotone-Revision: 3368edd867e7e60f4e721c5293cc367354ea4bd0

Monotone-Author: jrandom
Monotone-Date: 2005-03-24T01:19:52
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -60,3 +60,12 @@ div.main {
 	text-align: left;
 	color: inherit;
 }
+
+div.news {
+	margin: 0em 1em 1em 224px;
+	padding: .5em 1em;
+	background-color: #ffffc0;
+	border: medium solid #ffffd0;
+	text-align: left;
+	color: inherit;
+}
