--- a/apps/syndie/jsp/syndie.css
+++ b/apps/syndie/jsp/syndie.css
@@ -1,67 +1,92 @@
-.syndieEntrySubjectCell {
-    background-color: #999999;
-    font-size: 12px;
-    font-weight: bold;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    border: 0px;
-}
-.syndieEntryMetaCell {
-    background-color: #888888;
-    font-size: 10px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    border: 0px;
-}
-.syndieEntryAttachmentsCell {
-    background-color: #aaaaaa;
-    font-size: 12px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    border: 0px;
-}
-.syndieEntrySummaryCell {
-    background-color: #eeeeee;
-    font-size: 12px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    border: 0px;
-}
-.syndieEntryBodyCell {
-    background-color: #eeeeee;
-    font-size: 12px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    border: 0px;
-}
-.syndieTopNavBlogsCell {
-    background-color: #888888;
-    font-size: 14px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    border: 0px;
-}
-.syndieTopNavRemoteCell {
-    background-color: #888888;
-    font-size: 14px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    border: 0px;
-}
-.syndieTopNavManageCell {
-    background-color: #888888;
-    font-size: 14px;
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    border: 0px;
-}
-
 body {
 	margin : 0px;
 	padding : 0px;
-	text-align : center;
 	font-family: Arial, Helvetica, sans-serif;
-	background-color : #FFFFFF;
+	background-color : #EEEEEE;
 	color: #000000;
-    font-size: 12px;
+	font-size: 12px;
+}
+.b_topnavUser {
+	text-align: right;
+	background-color: #CCCCDD;
+	border-spacing: 0px;
+	margin: 0px;
+	padding: 0px;
+	border-width: 0px;
+	border: 0px;
+}
+.b_topnavHome {
+	background-color: #CCCCDD;
+	color: #000000;
+	width: 50px;
+	text-align: left;
+}
+.b_topnav {
+	background-color: #CCCCDD;
+	border-spacing: 0px;
+	margin: 0px;
+	padding: 0px;
+	border-width: 0px;
+	border: 0px;
+}
+.s_detail_subject {
+	font-size: 10px;
+	text-align: left;
+	background-color: #BBBBFF;
+	border-spacing: 0px;
+	margin: 0px;
+	padding: 0px;
+	border-width: 0px;
+	border: 0px;
+	border-style: none;
+}
+.s_detail_meta {
+	font-size: 10px;
+	text-align: right:
+	background-color: #BBBBFF;
+	border-spacing: 0px;
+	margin: 0px;
+	padding: 0px;
+	border-width: 0px;
+	border: 0px;
+	border-style: none;
+}
+
+.s_summary_subject {
+	font-size: 10px;
+	text-align: left;
+	background-color: #BBBBFF;
+	border-spacing: 0px;
+	margin: 0px;
+	padding: 0px;
+	border-width: 0px;
+	border: 0px;
+	border-style: none;
+}
+.s_summary_meta {
+	font-size: 10px;
+	text-align: right:
+	background-color: #BBBBFF;
+	border-spacing: 0px;
+	margin: 0px;
+	padding: 0px;
+	border-width: 0px;
+	border: 0px;
+	border-style: none;
+}
+.s_summary_summDetail {
+	font-size: 10px;
+}
+.s_detail_summDetail {
+}
+.s_detail_summDetailBlog {
+}
+.s_detail_summDetailBlogLink {
+}
+td.s_detail_summDetail {
+	background-color: #DDDDFF;
+}
+td.s_summary_summ {
+	font-size: 10px;
+	background-color: #DDDDFF;
 }
