--- a/apps/syndie/jsp/syndie.css
+++ b/apps/syndie/jsp/syndie.css
@@ -57,7 +57,7 @@ body {
 }
 .s_detail_meta {
 	font-size: 10px;
-	text-align: right:
+	text-align: right;
 	background-color: #BBBBFF;
 	border-spacing: 0px;
 	margin: 0px;
@@ -80,7 +80,7 @@ body {
 }
 .s_summary_meta {
 	font-size: 10px;
-	text-align: right:
+	text-align: right;
 	background-color: #BBBBFF;
 	border-spacing: 0px;
 	margin: 0px;
