--- a/apps/syndie/jsp/syndie.css
+++ b/apps/syndie/jsp/syndie.css
@@ -55,6 +55,24 @@ body {
 	border: 0px;
 	border-style: none;
 }
+.s_detail_quote {
+       margin-left: 1em;
+       border-width: 1px;
+       border-color: #DBDBDB;
+       border-style: solid;
+       background-color: #E0E0E0;
+}
+.s_detail_italic {
+       font-style: italic;
+}
+.s_detail_bold {
+       font-style: normal;
+       font-weight: bold;
+}
+.s_detail_underline {
+       font-style: normal;
+       text-decoration: underline;
+}
 .s_detail_meta {
 	font-size: 10px;
 	text-align: right;
@@ -89,6 +107,25 @@ body {
 	border: 0px;
 	border-style: none;
 }
+.s_summary_quote {
+       margin-left: 1em;
+       border-width: 1px;
+       border-color: #DBDBDB;
+       border-style: solid;
+       background-color: #E0E0E0;
+}
+.s_summary_italic {
+       font-style: italic;
+}
+.s_summary_bold {
+       font-style: normal;
+       font-weight: bold;
+}
+.s_summary_underline {
+       font-style: normal;
+       text-decoration: underline;
+}
+
 .s_summary_summDetail {
 	font-size: 10px;
 }
