Navbar is now customizeable via docs/toolbar.html.  There is a default should that file not be there.  And... wtf, didn't my syndie thumbnail patch take? Well, no conflicts reported so, here it goes again.
Monotone-Parent: 56031a55b74eae45b7def88baab96a876d834a82
Monotone-Revision: d5ddd159ba40159089e1729d0abd09ce7d0be3e1

Monotone-Author: polecat
Monotone-Date: 2005-12-13T08:18:59
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -25,6 +25,10 @@ div.logo {
 	text-align: left;
 }
 
+div.toolbar {
+    font-weight: bold
+}
+
 div.routersummary {
 	/* width: 8em; */
 	/* height: 5em; */
