2005-01-09  jrandom     * Bugfix for a rare SSU error (thanks cervantes!)     * More progress on the blog interface, allowing customizable blog-wide       links.
Monotone-Parent: e60e379276c35911c299a58e49e22641680f7dc3
Monotone-Revision: a27acc54de0382b762896f74dde01e752ee8b88e

Monotone-Author: jrandom
Monotone-Date: 2006-01-09T07:02:01
Monotone-Branch: i2p.i2p

--- a/apps/syndie/jsp/syndie.css
+++ b/apps/syndie/jsp/syndie.css
@@ -4,7 +4,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	background-color : #EEEEEE;
 	color: #000000;
-	font-size: 12px;
+	//font-size: 12px;
 }
 .b_topnavUser {
 	text-align: right;
@@ -45,7 +45,7 @@ body {
         margin: 0px;
 }
 .s_detail_subject {
-	font-size: 10px;
+	font-size: 80%;
 	text-align: left;
 	background-color: #BBBBFF;
 	border-spacing: 0px;
@@ -74,7 +74,7 @@ body {
        text-decoration: underline;
 }
 .s_detail_meta {
-	font-size: 10px;
+	font-size: 80%;
 	text-align: right;
 	background-color: #BBBBFF;
 	border-spacing: 0px;
@@ -86,7 +86,7 @@ body {
 }
 
 .s_summary_subject {
-	font-size: 10px;
+	font-size: 80%;
 	text-align: left;
 	background-color: #BBBBFF;
 	border-spacing: 0px;
@@ -97,7 +97,7 @@ body {
 	border-style: none;
 }
 .s_summary_meta {
-	font-size: 10px;
+	font-size: 80%;
 	text-align: right;
 	background-color: #BBBBFF;
 	border-spacing: 0px;
@@ -127,7 +127,7 @@ body {
 }
 
 .s_summary_summDetail {
-	font-size: 10px;
+	font-size: 80%;
 }
 .s_detail_summDetail {
 }
@@ -139,6 +139,6 @@ td.s_detail_summDetail {
 	background-color: #DDDDFF;
 }
 td.s_summary_summ {
-	font-size: 10px;
+	font-size: 80%;
 	background-color: #DDDDFF;
 }
