* Certificates:       - Add a signed Certificate type       - Add a main() to PrivateKeyFile to generate         Destinations with various Certificate types       - Add a VerifiedDestination class to check Certificates         of various types       - Add a HashCash library from http://www.nettgryppa.com/code/         (no distribution restrictions)       - Allow non-null Certificates in addressbook
Monotone-Parent: 4038a7324f31cb243d19c4db01ee1e296760d7c6
Monotone-Revision: 78c5e2792041a8147ab7a9234634b13943a22763

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2008-11-02T22:13:11
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -45,6 +45,7 @@ div.routersummary {
 	color: inherit;
 	font-size: small;
 	clear: left; /* fixes a bug in Opera */
+	overflow: auto;
 }
 
 div.warning {
