console css tweaks
Monotone-Parent: 6f19594e8eb46f102371d2201b041a1fadf8f190
Monotone-Revision: 59d2197e11bf9783345e6572343634cba0a3a698

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-01-22T16:00:41
Monotone-Branch: i2p.i2p

--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -22,11 +22,12 @@ div.logo {
 	top: 1em;
 	margin: 0em;
 	padding: .5em;
-	text-align: left;
+	text-align: center;
 }
 
 div.toolbar {
-    font-weight: bold
+	margin: 0em 0em 2em 0em;
+	font-weight: bold;
 }
 
 div.routersummary {
@@ -70,7 +71,7 @@ div.news {
 	margin: 0em 1em 1em 224px;
 	padding: .5em 1em;
 	background-color: #ffffc0;
-	border: medium solid #ffffd0;
+	border: medium solid #ffffa0;
 	text-align: left;
 	color: inherit;
 }
