--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -9,5 +9,10 @@
     android:layout_height="wrap_content" 
     android:text="Hello World, I2PAndroid"
     />
+<ImageView  
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content" 
+    android:src="@drawable/i2plogo"
+    />
 </LinearLayout>
 
