--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -1,3 +1,9 @@
+/***
+html {
+	font-size: 14px;
+}
+***/
+
 body {
 	font-family: Verdana, Tahoma, Helvetica, sans-serif;
 	margin: 1em 0em;
@@ -5,6 +11,7 @@ body {
 	text-align: center;
 	background-color: white;
 	color: black;
+	font-size: 100%;
 }
 
 .hide {
@@ -30,23 +37,24 @@ div.toolbar {
 	font-weight: bold;
 }
 
-div.routersummary {
-	/* width: 8em; */
-	/* height: 5em; */
-	/* position: fixed; */
+div.routersummaryouter {
 	float: left;
-	width: 200px;
-	/* left: 1em; */
-	/* top: 1em; */
-	margin: 0em;
-	padding: .5em;
-	text-align: left;
-	border: medium solid #efefff;
-	background-color: #fafaff;
-	color: inherit;
-	font-size: small;
+	width: 215px;
+	margin: 0;
+	padding: 0;
+	border: 0;
 	clear: left; /* fixes a bug in Opera */
 	overflow: auto;
+}
+
+div.routersummary {
+	background-color: #fafaff;
+	width: 195px;
+	color: inherit;
+	margin: 0em;
+	padding: 5px;
+	text-align: left;
+	border: medium solid #efefff;
 }
 
 div.warning {
@@ -65,6 +73,10 @@ div.main {
 	border: medium solid #ffffd0;
 	text-align: left;
 	color: inherit;
+}
+
+div.main textarea {
+	width: 100%;
 }
 
 div.news {
