css fixes from badger
Monotone-Parent: d3d564867c4c9d7a6cc98025319f547f839e38c0
Monotone-Revision: 12655c94f82ed68ddcd77d3fe4d7061047e451c3

Monotone-Author: zzz@mail.i2p
Monotone-Date: 2009-04-23T18:21:25

--- a/apps/routerconsole/jsp/default.css
+++ b/apps/routerconsole/jsp/default.css
@@ -1,9 +1,3 @@
-/***
-html {
-	font-size: 14px;
-}
-***/
-
 body {
 	font-family: Verdana, Tahoma, Helvetica, sans-serif;
 	margin: 1em 0em;
@@ -55,6 +49,7 @@ div.routersummary {
 	padding: 5px;
 	text-align: left;
 	border: medium solid #efefff;
+	font-size: 0.82em;
 }
 
 div.warning {
@@ -76,7 +71,7 @@ div.main {
 }
 
 div.main textarea {
-	width: 100%;
+	width: 100% !important;
 }
 
 div.news {
