* Improvements to popup menu rightclick action     * Added general configuration options (still not available by default)     * General fixes     * Added ant build options (irc says eche|on would like that ;))
Monotone-Parent: 6c10fcb35bbacab1d3add8997d49bc5575f15a54
Monotone-Revision: 622324a8f0f863b7b4eaaa26385228a65c71edf0

Monotone-Author: mathiasdm@mail.i2p
Monotone-Date: 2009-05-06T16:17:58
Monotone-Branch: i2p.i2p

--- a/apps/desktopgui/src/gui/LogViewer.form
+++ b/apps/desktopgui/src/gui/LogViewer.form
@@ -3,6 +3,7 @@
 <Form version="1.5" maxVersion="1.6" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="title" type="java.lang.String" resourceKey="Form.title"/>
     <Property name="name" type="java.lang.String" value="Form" noResource="true"/>
   </Properties>
   <SyntheticProperties>
